# cobbler-tftp-experiment

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README  pyproject.toml  setup.cfg  setup.py
.github/: labeler.yml
.github/workflows/: black.yml  codacy.yml  isort.yml  pylint.yml  pyright.yml
docs/: conf.py  index.rst
src/: cbl_tftp.py  daemon.py  main.py  service.py  settings.yml
src/cobbler-tftp/: cbl_tftp.py  service.py
src/cobbler_tftp/: __init__.py  authentication.py  cbl_tftp.py  service.py
src/cobbler_tftp/config/: settings.yml
src/cobbler_tftp/srv/: cbl_tftp.py
