[build-system]
requires = ["pip>=23.0.1", "setuptools>=67.4.0", "wheel=>=0.38.4", "fbtftp~=0.5"]

[project]
name = "cobbler-tftp"
version = "0.0.1"
authors = [
  {name = "Christopher Hock", email = "christopher.hock@suse.com"}
]
description = "A tftp server for Cobbler based on fbtftp"
readme = "README"
requires-python = ">=3.10.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "fbtftp ~=0.5",
]