[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobbler-tftp"
authors = [
  {name = "Christopher Hock", email = "christopher.hock@suse.com"}
]
description = "A tftp server for Cobbler based on fbtftp"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT-License"}
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "fbtftp ~=0.5",
]
dynamic = ["version"]
