[metadata]
name = cbltftp
author = Christopher Hock
author_email = christopher.hock@suse.com
url = https://github.com/ByteOtter/cobbler-tftp
description = The tftp server daemon for Cobbler
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cobbler, tftp
license = MIT license
classifiers =
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
  black ~= 23.1.0
  click ~= 8.1.3
  docutils ~= 0.19
  fbtftp ~= 0.5
  Jinja2 ~= 3.1.2
  lockfile ~= 0.12.2
  MarkupSafe ~= 2.1.2
  mypy-extensions ~= 1.0.0
  packaging ~= 23.0
  pathspec ~= 0.11.0
  pip ~= 23.0.1
  platformdirs ~= 3.1.0
  python-daemon ~= 3.0.1
  PyYAML ~= 6.0
  setuptools >= 65.6.3
  setuptools-scm ~= 7.1.0
  tomli ~= 2.0.1
  typing_extensions ~= 4.5.0
  wheel ~= 0.38.4
