[metadata]
name = cbltftp
author = Christopher Hock
author_email = christopher.hock@suse.com
url = https://github.com/ByteOtter/cobbler-tftp
description = The tftp server daemon for Cobbler
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cobbler, tftp
license = MIT license
classifiers =
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
  attrs~=22.2.0
  black~=23.1.0
  click~=8.1.3
  docutils~=0.19
  exceptiongroup~=1.1.0
  fbtftp~=0.5
  iniconfig~=2.0.0
  Jinja2~=3.1.2
  lockfile~=0.12.2
  MarkupSafe~=2.1.2
  mypy-extensions~=1.0.0
  packaging~=23.0
  pathspec~=0.11.0
  platformdirs~=3.1.0
  pluggy~=1.0.0
  py~=1.11.0
  pytest~=7.2.2
  pytest-mock~=3.6.1
  python-daemon~=3.0.1
  PyYAML~=6.0
  setuptools-scm~=7.1.0
  tomli~=2.0.1
  typing_extensions~=4.5.0
  importlib-resources~=5.12.0
